# Genqo.jl

./: .gitattributes  .gitignore  Manifest.toml  Project.toml  README.md  calculate_fidelity.jl  density_operator.jl  export_matrix.jl  justfile
assets/data/: jl-bench.json  py-bench.json
genqo_old_pkg/: .gitignore
genqo_old_pkg/genqo_old/: __init__.py
python/: genqo.py  pyproject.toml  requirements.txt
python/genqo/: __init__.py  genqo.py
python/genqo_jl/: __init__.py  genqo.py  sweep.py
src/: Genqo.jl  calculate_fidelity.jl  fidelity.jl  genqobase.jl  sigsag.jl  spdc.jl  tmsv.jl  tools.jl  zalm.jl
test/: bench.jl  conftest.py  plot_comparison.py  pytest.ini  runtests.jl  test_compare_with_python.py  test_gqpy_bench.py
test/genqo_old_pkg/: README.md  pyproject.toml
test/genqo_old_pkg/genqo_old/: __init__.py  genqo_old_pip.py
test/python/: README.md  conftest.py  plot_comparison.py  test_compare_with_python.py
tutorial/: Manifest.toml  hybrid_model_jl.ipynb
